--- a/frontend/public/global.css
+++ b/frontend/public/global.css
@@ -7,6 +7,10 @@
   font-weight: normal;
   font-style: normal;
 }
+html {
+  margin: 0;
+  padding: 0;
+}
 *,
 *::after,
 *::before {
@@ -17,6 +21,8 @@
 body {
   background-color: #f3f4ed;
   font-family: "dank_monoregular", sans-serif;
+  max-width: 1550px;
+  margin: 0 auto;
 }
 a {
   text-decoration: none;
@@ -33,21 +39,30 @@ ul {
   border-radius: 0.5rem;
 }
 form {
-  width: 30vw;
+  width: clamp(220px,50vw,500px);
 }
 label {
   display: block;
   text-align: left;
+  font-weight: bold;
 }
 input {
   padding: 5px;
   display: block;
   margin: 10px 0;
   width: 100%;
+  font-size: 20px;
+  font-family: "dank_monoregular", sans-serif;
+  font-weight: 700;
+  border-radius: 5px;
 }
 input[type="submit"] {
   width: 100%;
   margin-top: 20px;
+  background: none;
+  border: 2px solid black;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 a {
