--- a/frontend/static/global.css
+++ b/frontend/static/global.css
@@ -73,14 +73,14 @@ a {
 
 button{
   outline: none;
-  padding: 10px 20px;
+  padding: clamp(6px,1vw,10px) clamp(11px,1vw,20px);
   background-color: white;
   cursor: pointer;
   border-radius: 10px;
   color: #524763;
   font-family: "dank_monoregular", sans-serif;
   font-weight: bold;
-  font-size: 18px;
+  font-size: clamp(13px,2vw,18px);
   transition: 0.2s ease-in-out all;
 }
 button:hover{
